--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ header {
     z-index: 2;
     width: 100%;
     height: 100px;
-    border-bottom: 10px solid white;
+    border-bottom: 10px solid tan;
     align-items: center;
 }
 
@@ -62,7 +62,7 @@ main {
 }
 
 section{
-    background-color: yellow;
+    background-color: white;
     width:100%;
 }
 
@@ -80,52 +80,89 @@ flex-direction: column;
 }
 
 h2 {
-    color: white;
+    color: #091c1b;
+    text-align: center;
+    font-size: 35px;
     
 }
 
 #left{
-    height: 200px;
-    width: 50%;
-    background-color: red;;
+    height: 600px;
+    width: 30%;
+    background-color: tan;
+    display: flex;
+    justify-content: center;
 }
 
+img{
+    margin-top: 20px;
+    box-shadow: 10px 10px #091c1b;
+}
+
+
+
 #right{
-    height: 200px;
-width:50%;
-    background-color: purple;
-    justify-content: center;
-    align-items: center;
+    height: 600px;
+    width:70%;
+    background-color: #091c1b;
+}
+
+p {
+    font-size: 55px;
+    color: white;
+    text-shadow: 3px 3px tan;
+    display: table-cell;
+    vertical-align: middle;
     text-align: center;
 }
 
-.img {
-    height: 30%;
-    width: 30%;
-    box-shadow: #091c1b;
-}
-
 #projects {
-    background-color: orange;
+    background-color: white;
     width: 100%;
+    height: 75px;
+    border-bottom: 10px solid tan;
 }
 
 #work {
-    background-color: white;
-    height: 500px;
+    background-color: #091c1b;
+    height: 700px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 #holder{
-    width: 80%;
-    height: 75%;
-    background-color: black;
+    width: 90%;
+    height: 85%;
+    background-color: tan;
 }
 
-footer{
-    height: 300px;
-    background-color: green;
+h4 {
+    color: white;
+    text-align: center;
+    font-size: 55px;
 }
+
+h5 {
+    color: white;
+    text-align: center;
+    font-size: 45px;
+}
+
+
+footer{
+    height: 250px;
+    background-color:#091c1b;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    border-top: solid 20px tan;
+
+}
+
+h3{ 
+    font-size: 45px;
+}
+
