--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,7 @@ nav{
     width: 70%;
    justify-content: center;
    align-items: center;
+   display: flex;
    
 }
 
@@ -108,7 +109,7 @@ img{
 }
 
 p {
-    font-size: 55px;
+    font-size: 35px;
     color: white;
     text-shadow: 3px 3px tan;
     display: table-cell;
